// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sheet Footer should render 1`] = `
<div>
  <div
    class="sheet-footer divider"
  />
</div>
`;

exports[`Sheet Header should render 1`] = `
<div>
  <div
    class="sheet-header"
  />
</div>
`;

exports[`Sheet Section should render 1`] = `
<div>
  <div
    class="sheet-section"
  />
</div>
`;

exports[`Sheet Subtitle should render 1`] = `
<div>
  <h3
    class="sheet-subtitle"
  />
</div>
`;

exports[`Sheet TertiaryTitle should render 1`] = `
<div>
  <div
    class="h4 sheet-tertiary-title"
  />
</div>
`;

exports[`Sheet Text should render 1`] = `
<div>
  <div
    class="sheet-text"
  />
</div>
`;

exports[`Sheet Title should render 1`] = `
<div>
  <h2
    class="sheet-title"
  />
</div>
`;

exports[`Sheet should render 1`] = `
<div>
  <div
    class="sheet"
  />
</div>
`;
